# matrix

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
lin_sys/: Cargo.toml
lin_sys/src/: main.rs
matrix/: Cargo.toml
matrix/src/: lib.rs
matrix_graphics/: Cargo.toml
matrix_graphics/src/: main.rs  structs.rs
