[package]
name = "matrix_graphics"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.10"
log = "0.4"
matrix = { version = "0.1.0", path = "../matrix" }
pixels = "0.11.0"
winit = "0.28.1"
winit_input_helper = "0.14.0"
bresenham = "0.1.1"
