[package]
name = "matrix_graphics"
version = "0.1.2"
edition = "2021"
license = "MIT"

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
matrix = { version = "0.1.2", path = "../matrix" }
pixels = "0.11.0"
winit = "0.28.2"
winit_input_helper = "0.14.0"
bresenham = "0.1.1"
